--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/aj2cousi/aj2cousi/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/aj2cousi/aj2cousi/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Projects</a></li>
+		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Blog</a></li>
+		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Bio</a></li>
+		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Sponsorships</a></li>
         </nav>
       </div><!-- end header -->
 
