--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
       <div id="header">
         <nav>
-		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Projects</a></li>
-		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Blog</a></li>
-		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Bio</a></li>
-		<li class="fork"><a href="https://github.com/aj2cousi/aj2cousi">Sponsorships</a></li>
+		<li class="fork"><a href="Projects.html">Projects</a></li>
+		<li class="fork"><a href="Blog.html">Blog</a></li>
+		<li class="fork"><a href="Bio.html">Bio</a></li>
+		<li class="fork"><a href="Sponsorships.html">Sponsorships</a></li>
         </nav>
       </div><!-- end header -->
 
