--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="header">
         <nav>
 		<li class="fork"><a href="Index.html">Home</a></li>
-		<li class="fork"><a href="Projects.html">Projectsssss</a></li>
+		<li class="fork"><a href="Projects.html">Projects</a></li>
 		<li class="fork"><a href="Blog.html">Blog</a></li>
 		<li class="fork"><a href="Bio.html">Bio</a></li>
 		<li class="fork"><a href="Sponsorships.html">Sponsorships</a></li>
