--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <section>
         <div id="title">
-          <h1>Aj2cousi</h1>
+          <h1>Home</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/aj2cousi">aj2cousi</a></span>
